--- a/includes/footer-simple.html
+++ b/includes/footer-simple.html
@@ -5,9 +5,9 @@
       <p>&copy; <span class="current-year">2025</span> Hamit Efe Çınar. All rights reserved.</p>
     </div>
     <ul class="footer-links">
-      <li><a href="publications.html">Publications</a></li>
-      <li><a href="academic.html">Academic Experiences</a></li>
-      <li><a href="personal.html">Personal</a></li>
+      <li><a href="/publications">Publications</a></li>
+      <li><a href="/academic">Academic Experiences</a></li>
+      <li><a href="/personal">Personal</a></li>
     </ul>
     <div class="footer-social">
       <a href="mailto:efe.cinar@sabanciuniv.edu" class="social-icon" title="Email">
